--- a/TitlesOrganizer.Web/Views/Books/Details.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Details.cshtml
@@ -1,21 +1,25 @@
-﻿@model TitlesOrganizer.Web.Models.Movie
+﻿@model TitlesOrganizer.Web.Models.Book
 
 @{
     ViewData["Title"] = Model.Title;
 }
 
 <h1>@Model.Title</h1>
+
 <div>
-    <h4>Movie</h4>
+    <h4>Book</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OriginalTitle)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Authors)
         </dt>
-        <dd class = "col-sm-10">
-            <i>@Html.DisplayFor(model => model.OriginalTitle)</i>
+        <dd class="col-sm-10">
+            @{
+                string authors = string.Join(", ", Model.Authors);
+            }
+            @authors
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Categories)
         </dt>
         <dd class="col-sm-10">
@@ -25,28 +29,28 @@
             @categories
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Directors)
+            @Html.DisplayNameFor(model => model.OriginalTitle)
         </dt>
         <dd class="col-sm-10">
-            @{
-                string directors = string.Join(", ", Model.Directors);
-            }
-            @directors
+            <i>@Html.DisplayFor(model => model.OriginalTitle)</i>
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.OriginalLanguage)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.OriginalLanguage)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Edition)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Edition)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Year)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Year)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Countries)
-        </dt>
-        <dd class="col-sm-10">
-            @{
-                string countries = string.Join(", ", Model.Countries);
-            }
-            @countries
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
