--- a/TitlesOrganizer.Web/Views/Shared/_Layout.cshtml
+++ b/TitlesOrganizer.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">Movies</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Books</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
