--- a/TitlesOrganizer.Web/Views/Movies/Details.cshtml
+++ b/TitlesOrganizer.Web/Views/Movies/Details.cshtml
@@ -16,11 +16,11 @@
             <i>@Html.DisplayFor(model => model.OriginalTitle)</i>
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Categories)
+            @Html.DisplayNameFor(model => model.Genres)
         </dt>
         <dd class="col-sm-10">
             @{
-                string categories = string.Join("/", Model.Categories);
+                string categories = string.Join("/", Model.Genres);
             }
             @categories
         </dd>
