--- a/TitlesOrganizer.Web/Views/Books/Details.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Details.cshtml
@@ -1,38 +1,29 @@
-﻿@model TitlesOrganizer.Web.Models.Book
+﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.BookDetailsVM
 
 @{
     ViewData["Title"] = Model.Title;
 }
 
 <h1>@Model.Title</h1>
-
+@if (!string.IsNullOrEmpty(Model.InSeries))
+{
+    <div>@Model.InSeries @Html.ActionLink("go to series","", new { id = Model.SeriesId })</div>
+}
 <div>
-    <h4>Book</h4>
+    @foreach (var author in Model.Authors)
+    {
+        @Html.ActionLink(author.Value, "AuthorDetails", new { id = author.Key })
+    }
+</div>
+<div>
+    <h6>@Model.Description</h6>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Authors)
-        </dt>
-        <dd class="col-sm-10">
-            @{
-                string authors = string.Join(", ", Model.Authors);
-            }
-            @authors
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Genres)
-        </dt>
-        <dd class="col-sm-10">
-            @{
-                string categories = string.Join("/", Model.Genres);
-            }
-            @categories
-        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.OriginalTitle)
         </dt>
         <dd class="col-sm-10">
-            <i>@Html.DisplayFor(model => model.OriginalTitle)</i>
+            @Html.DisplayFor(model => model.OriginalTitle)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.OriginalLanguage)
@@ -40,23 +31,17 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.OriginalLanguage)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Edition)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Edition)
-        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Year)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Year)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Edition)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Edition)
         </dd>
     </dl>
 </div>
