--- a/TitlesOrganizer.Web/Views/Books/Authors.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Authors.cshtml
@@ -25,7 +25,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var (author, index) in Model.Authors.Select((value, index) => (value, index +1))) {
+@foreach (var (author, index) in Model.List.Select((value, index) => (value, index +1))) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => index)
