Add AddBook view

--- a/TitlesOrganizer.Web/Views/Books/Index.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Books</h1>
 
 <p class="row">
-    <a asp-action="Create" class="col">Create New</a>
+    <a asp-action="AddBook" class="col">Create New</a>
     <a asp-action="Authors" class="col">See Authors</a>
     <a asp-action="Genres" class="col">See Genres</a>
     <a asp-action="Series" class="col">See Book Series</a>
