--- a/TitlesOrganizer.Web/Views/_ViewImports.cshtml
+++ b/TitlesOrganizer.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using TitlesOrganizer.Web
 @using TitlesOrganizer.Web.Models
+@using FormHelper
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, FormHelper
