--- a/TitlesOrganizer.Web/Views/Books/AddBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/AddBook.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Create New Book</h1>
-<form asp-formhelper="true" asp-action="AddBook" asp-dataType="FormData" asp-enableButtonAfterSuccess="true" enctype="multipart/form-data">
+<form asp-formhelper="true" asp-action="AddBook" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id" />
     <div class="form-group row">
