--- a/TitlesOrganizer.Web/Views/Books/Index.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Books</h1>
 
 <p class="row">
-    <a asp-action="AddBook" class="col">Create New</a>
+    <a href="/Books/CreateNew" class="col">Create New</a>
     <a asp-action="Authors" class="col">See Authors</a>
     <a asp-action="Genres" class="col">See Genres</a>
     <a asp-action="Series" class="col">See Book Series</a>
@@ -34,7 +34,7 @@
                     <td>@Html.DisplayFor(modelItem => index)</td>
                     <td>@Html.DisplayFor(modelItem => book.Title)</td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = book.Id }) |
+                        <a href=@($"/Books/Update/{book.Id}")>Edit</a> |
                         @Html.ActionLink("Details", "Details", new { id = book.Id }) |
                         @Html.ActionLink("Delete", "Delete", new { id = book.Id })
                     </td>
