--- a/TitlesOrganizer.Web/Views/Books/Details.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Details.cshtml
@@ -86,7 +86,7 @@
             }
     </div>
     <div>
-        @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+        <a href=@($"/Books/Update/{Model.Id}")>Edit</a> |
         <a asp-action="Index">Back to List</a>
     </div>
 </div>
