--- a/TitlesOrganizer.Web/Views/Books/SelectAuthorsForBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/SelectAuthorsForBook.cshtml
@@ -14,7 +14,7 @@
                         Selected author
                     </th>
                     <th scope="col">
-                        Other books
+                        Books
                     </th>
                 </tr>
             </thead>
@@ -27,7 +27,7 @@
                             @Html.DisplayTextFor(model => model.SelectedAuthors[i].FullName)
                         </td>
                         <td>
-                            @Html.DisplayTextFor(model => model.SelectedAuthors[i].OtherBooks)
+                            @Html.DisplayTextFor(model => model.SelectedAuthors[i].Books)
                         </td>
                     </tr>
                 }
@@ -41,7 +41,7 @@
         <input type="submit" value="Search" asp-action="SelectAuthorsForBook" />
     </div>
     <div class="row">
-        <table class="table table-hover table-bordered">
+        <table class="table table-hover table-bordered" id="allAuthors">
             <thead>
                 <tr>
                     <th>
@@ -59,10 +59,10 @@
         @for (int i = 0; i < Model.List.Count; i++)
         {
                 <tr>
-                    @Html.HiddenFor(model => model.List[i].Id)
+                    <input type="hidden" asp-for="@Model.List[i].Id" value="@Model.List[i].Id" />
                     <td class="text-center">
                         <div class="form-check-inline">
-                            <input type="checkbox" class="form-check-input" asp-for="@Model.List[i].IsForBook" aria-label="Author selected" autocomplete="off" onchange="javascript:AuthorSelectionChanged(this)" />
+                            <input type="checkbox" class="form-check-input" asp-for="@Model.List[i].IsForBook" aria-label="Author selected" onchange="javascript:AuthorSelectionChanged(this)" />
                         </div>
                     </td>
                     <td>
