--- a/TitlesOrganizer.Web/Views/Books/UpsertBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/UpsertBook.cshtml
@@ -2,7 +2,7 @@
 
 <h1>@ViewData["Title"]</h1>
 <hr />
-<form method="post" enctype="multipart/form-data">
+<form method="post" enctype="multipart/form-data" asp-formhelper="true" asp-controller="Books" asp-action="UpsertBook">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id" />
     <div class="form-group row">
@@ -14,19 +14,16 @@
     </div>
     <div class="form-group row">
         <label asp-for="Authors" class="col-sm-3 col-form-label"></label>
+        <input asp-for="Authors" type="hidden" />
         @if (!string.IsNullOrWhiteSpace(Model.Authors))
         {
             <div class="col-sm-auto col-auto">
-                <input asp-for="Authors" class="border-0 bg-transparent form-control pe-none p-0" readonly="true" tabindex="-1" disabled />
+                @Model.Authors
                 <span asp-validation-for="Authors" class="text-danger"></span>
             </div>
         }
-        else
-        {
-            <input type="hidden" asp-for="Authors" value="" />
-        }
         <div class="col-auto">
-            <button asp-controller="Books" asp-action="SelectAuthors" formmethod="post" type="submit" id="ModifyAuthors" name="ModifyAuthors" class="btn btn-outline-primary btn-lg d-inline" title="Select authors" >
+            <button onclick="javascript:Submit('SelectAuthors')" formmethod="post" type="submit" id="ModifyAuthors" name="ModifyAuthors" class="btn btn-outline-primary btn-lg d-inline" title="Select authors" >
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
                     <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8Zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022ZM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816ZM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z" />
                 </svg>
@@ -65,16 +62,13 @@
     </div>
     <div class="form-group row">
         <label asp-for="Genres" class="col-sm-3 col-form-label"></label>
+        <input asp-for="Genres" type="hidden" />
         @if (!string.IsNullOrWhiteSpace(Model.Genres))
         {
             <div class="col-sm-auto col-auto">
-                <input asp-for="Genres" class="border-0 bg-transparent pe-none form-control p-0" readonly="true" tabindex="-1" disabled />
+                @Model.Genres
                 <span asp-validation-for="Genres" class="text-danger"></span>
             </div>
-        }
-        else
-        {
-            <input type="hidden" asp-for="Genres" value="" />
         }
         <div class="col-auto">
             <button type="submit" id="ModifyGenres" name="ModifyGenres" class="btn button btn-outline-primary btn-lg">
@@ -94,16 +88,12 @@
     </div>
     <div class="form-group row">
         <label asp-for="Series" class="col-sm-3 col-form-label"></label>
+        <input asp-for="Series" type="hidden" />
         @if (!string.IsNullOrWhiteSpace(Model.Series))
         {
             <div class="col-sm-auto col-auto">
-                <input asp-for="Series" class="border-0 bg-transparent form-control pe-none p-0" readonly="true" tabindex="-1" disabled />
-                <span asp-validation-for="Series" class="text-danger"></span>
+                @Model.Series
             </div>
-        }
-        else
-        {
-            <input type="hidden" asp-for="Series" value="" />
         }
         <div class="col-auto">
             <button data-form-submit="true" id="ModifySeries" name="ModifySeries" class="btn btn-outline-primary btn-lg" value="Modify series">
@@ -121,7 +111,7 @@
         </div>
     </div>
     <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-primary btn-lg" asp-action="UpdateBook" />
+        <input value="Save" class="btn btn-primary btn-lg" formmethod="post" type="submit" />
     </div>
 </form>
 
@@ -142,8 +132,10 @@
         }
 
         function Submit(actionName) {
-            document.forms[0].attributes.action.value = '/Books/' + actionName;
-            document.forms[0].submit();
+            if ($(document.forms[0]).valid()) {
+                document.forms[0].attributes.action.value = '/Books/' + actionName;
+                document.forms[0].submit();
+            }
         }
     </script>
 
