--- a/TitlesOrganizer.Web/Views/Books/AddNewAuthor.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/AddNewAuthor.cshtml
@@ -1,14 +1,21 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.NewAuthorVM
+﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.AuthorVM
 
 @{
-    ViewData["Title"] = "Add new author for \"" + Model.BookTitle + "\"";
+    if (string.IsNullOrWhiteSpace(Model.BookTitle))
+    {
+        ViewData["Title"] = "Add new author";
+    }
+    else
+    {
+        ViewData["Title"] = "Add new author for \"" + Model.BookTitle + "\"";
+    }
 }
 
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddNewAuthorForBook">
+        <form asp-action="AddNewAuthor" asp-formhelper="true">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="Id" type="hidden" />
             <div class="form-group">
@@ -30,9 +37,18 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="SelectAuthorsForBook" data-id="@Model.BookId">Back to selecting authors</a>
-</div>
+@if (Model.Id == default)
+{
+    <div>
+        <a asp-action="Authors">Back to authors list</a>
+    </div>
+}
+else
+{
+    <div>
+        <a asp-action="SelectAuthorsForBook" asp-route-id="@Model.BookId">Back to selecting authors</a>
+    </div>
+}
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
