--- a/TitlesOrganizer.Web/Views/Books/Authors.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Authors.cshtml
@@ -5,43 +5,50 @@
 }
 
 <h1>Authors</h1>
+<div class="container">
+    <div class="row row-cols-2 row-cols-lg-4 row-cols-md-3 gy-5">
+    @foreach (var author in Model.List) 
+    {
+            <div class="col-6 card p-3 border-0">
+                <div class="modal fade" id=@("modalDetails_" + author.Id) tabindex="-1" aria-labelledby="@("modalDetailsLabel_" + author.Id)" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id=@("modalDetailsLabel_" + author.Id)>@author.FullName</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <h5>Books</h5>
+                                <ul class="list-group list-group-flash" style="text-align:left;">
+                                    @foreach (var book in author.Books)
+                                    {
+                                        <li class="list-group-item">@book</li>
+                                    }
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                No
-            </th>
-            <th>
-                Full Name
-            </th>
-            <th>
-                Books
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var (author, index) in Model.List.Select((value, index) => (value, index +1))) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => index)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => author.FullName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => author.Books)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = author.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = author.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = author.Id })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+            <button class="card-body btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target=@("#modalDetails_" + author.Id)>
+                <h5 class="card-title">@author.FullName</h5>
+                <div class="card-header" style="text-align:left;">Books</div>
+                <ul class="list-group list-group-flash" style="text-align:left;">
+            @{
+                int count = author.Books.Count;
+                if (count > 3)
+                {
+                    count = 3;
+                }
+
+                for (int i = 0; i < count; i++)
+                {
+                    <li class="list-group-item">@author.Books[i]</li>
+                }
+            }
+                </ul>
+            </button>
+    }
+    </div>
+</div>
