--- a/TitlesOrganizer.Web/Views/Books/SelectAuthorsForBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/SelectAuthorsForBook.cshtml
@@ -6,6 +6,7 @@
 
 <form enctype="multipart/form-data" method="post">
     <input type="hidden" asp-for="BookId" />
+    <input type="hidden" asp-for="BookTitle" />
     <div class="row">
         <table class="table table-success table-sm" id="selectedAuthors">
             <thead class="table-dark">
@@ -84,7 +85,7 @@
                 }
                 <tr>
                     <td colspan="3">
-                        <button type="submit" title="Add new author" href="/Books/Update/AddAuthor" formmethod="post">
+                        <button type="submit" title="Add new author" asp-action="AddNewAuthorForBook" formmethod="post">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
                                 <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
