Refactoring view models

--- a/TitlesOrganizer.Web/Views/Books/AddNewAuthor.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/AddNewAuthor.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.AuthorVM
+﻿@model AuthorVM
 
 @{
     if (string.IsNullOrWhiteSpace(Model.BookTitle))
