--- a/TitlesOrganizer.Web/Views/Books/Genres.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Genres.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TitlesOrganizer.Application.ViewModels.BookVMs.GenreVM>
+﻿@model IEnumerable<GenreVM>
 
 @{
     ViewData["Title"] = "Genres";
