--- a/TitlesOrganizer.Web/Views/Books/SelectAuthorsForBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/SelectAuthorsForBook.cshtml
@@ -36,8 +36,8 @@
         </table>
     </div>
     <div class="row">
-        <select asp-for="SortBy" asp-items="Html.GetEnumSelectList<TitlesOrganizer.Application.ViewModels.Common.SortByEnum>()" onchange="javascript:Submit();"></select>
-        <select asp-for="PageSize" asp-items="new SelectList(TitlesOrganizer.Application.ViewModels.Common.PageSize.List, TitlesOrganizer.Application.ViewModels.Common.PageSize.DataValueField, TitlesOrganizer.Application.ViewModels.Common.PageSize.DataTextField)" onchange="javascript:Submit();"></select>
+        <select asp-for="SortBy" asp-items="Html.GetEnumSelectList<TitlesOrganizer.Application.ViewModels.Helpers.SortByEnum>()" onchange="javascript:Submit();"></select>
+        <select asp-for="PageSize" asp-items="new SelectList(TitlesOrganizer.Application.ViewModels.Helpers.PageSize.List, TitlesOrganizer.Application.ViewModels.Helpers.PageSize.DataValueField, TitlesOrganizer.Application.ViewModels.Helpers.PageSize.DataTextField)" onchange="javascript:Submit();"></select>
         <input type="search" asp-for="SearchString" name="searchString" id="searchString" placeholder="Search..." onchange="javascript:Submit();" />
         <input type="submit" value="Search" asp-action="SelectAuthorsForBook" />
     </div>
